[package]
name = "qcloud"
version = "0.1.2"
edition = "2021"
description = "A command line tool to operate Tencent cloud object storage"
license = "MIT"
authors = ["bujnlc8 <75124771@qq.com>"]
repository = "https://github.com/bujnlc8/qcloud"
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
qcos = "0.1.5"
clap = {version = "3.1.8", features = ["derive"]}
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
mime_guess = "2.0.4"

[build-dependencies]
clap = "3.1.8"
clap_complete = "3.1.1"

[profile.release]
lto = true
