[package]
name = "qcloud"
version = "0.1.7"
edition = "2021"
description = "A CLI to operate Tencent cloud object storage"
license = "MIT"
authors = ["bujnlc8 <75124771@qq.com>"]
repository = "https://github.com/bujnlc8/qcloud"
categories = ["command-line-utilities"]
exclude = ["snapshot.png"]

[dependencies]
qcos = {version = "0.1.8", features = ["progress-bar"]}
clap = {version = "4", features = ["derive"]}
clap_complete = "4"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
mime_guess = "2.0.4"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.35"
colored = "2.1.0"
qrcode = {version = "0.14.1", default-features = false}

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
