[package]
name = "qcloud"
version = "0.1.9"
edition = "2021"
description = "A CLI to operate Tencent cloud object storage"
license = "MIT"
authors = ["bujnlc8 <75124771@qq.com>"]
repository = "https://github.com/bujnlc8/qcloud"
categories = ["command-line-utilities"]
exclude = ["snapshot.png"]

[dependencies]
qcos = {version = "0.1.9", features = ["progress-bar"]}
clap = {version = "4", features = ["derive"]}
clap_complete = "4"
toml = {version = "0.8.19", default-features = false, features = ["parse"]}
serde = { version = "1.0", features = ["derive"], default-features = false}
dirs = "4.0.0"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
qrcode = {version = "0.14.1", default-features = false}

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
